# Lab-Project-ota-example-for-AWS-IoT-Core

./: .cmake-format.yml  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  openocd.cfg  openocd_pgm.cfg  sdkconfig
cfg/FreeRTOS-Kernel/: FreeRTOSConfig.h
cfg/MqttStreams/: MQTTFileDownloader_config.h
cfg/coreMQTT/: core_mqtt_config.h
cfg/coreMQTT/api_cfg/: core_mqtt_config.h
cfg/csdk_logging/: logging.h
components/Jobs-for-AWS-IoT-embedded-sdk/: CMakeLists.txt
components/backoffalgorithm/: CMakeLists.txt
components/corejson/: CMakeLists.txt
components/coremqtt/: CMakeLists.txt
components/freertos_compat/: CMakeLists.txt
components/iot-core-jobs/: CMakeLists.txt
components/iot-core-jobs-ota-parser/: CMakeLists.txt
components/iot-core-mqtt-file-downloader/: CMakeLists.txt
components/mqtt_wrapper/: CMakeLists.txt
components/tinycbor/: CMakeLists.txt
demo/: main.c  ota_demo.c  ota_demo.h
demo/jobs/: core_jobs.c  core_jobs.h
demo/mqtt_wrapper/: mqtt_wrapper.c  mqtt_wrapper.h
demo/os/: ota_os_freertos.c  ota_os_freertos.h
demo/ota/: main.c  ota_demo.c  ota_demo.h
demo/ota-Agent-Orchestrator/: ota_demo.c  ota_demo.h
demo/ota-agent/: main.c  ota_demo.c
demo/simple-Ota-Orchestrator/: main.c  ota_demo.c
demo/transport/: openssl_posix.c  openssl_posix.h  sockets_posix.c  sockets_posix.h  transport_wrapper.c  transport_wrapper.h
demo/utils/: clock.h  clock_posix.c  freertos_hooks.c
docs/: AWSSetup.md
docs/design/: CONCEPTS.md
lib/aws-iot-core-jobs-ota-handler/source/: job_parser.c
lib/aws-iot-core-jobs-ota-handler/test/lib/: cmock_build.cmake
lib/aws-iot-core-jobs-ota-handler/tools/cmock/: create_test.cmake
lib/aws-iot-core-jobs/source/include/: core_jobs.h
lib/aws-iot-core-mqtt-file-delivery/: mqttFileDeliveryFilePaths.cmake
lib/aws-iot-core-mqtt-file-delivery/source/: MQTTFileDownloader.c  MQTTFileDownloader_base64.c
lib/aws-iot-core-mqtt-file-delivery/source/include/: MQTTFileDownloader.h
lib/aws-iot-core-mqtt-file-downloader/: mqttFileDownloaderFilePaths.cmake
lib/iot-core-jobs/: coreJobsFilePaths.cmake
lib/iot-core-jobs-ota-parser/: README.md  otaJobsFilePaths.cmake  ota_job_handler.c
lib/iot-core-jobs-ota-parser/include/: job_parser.h
lib/iot-core-jobs-ota-parser/source/: job_parser.c  ota_job_handler.c
lib/iot-core-jobs-ota-parser/source/include/: job_parser.h  ota_job_handler.h  ota_job_processor.h
lib/iot-core-jobs-ota-parser/test/: CMakeLists.txt
lib/iot-core-jobs-ota-parser/test/lib/: cmock_build.cmake
lib/iot-core-jobs-ota-parser/test/unit-test/: CMakeLists.txt  job_parser_utest.c  ota_job_handler_utest.c
lib/iot-core-jobs-ota-parser/tools/cmock/: create_test.cmake
lib/iot-core-jobs/source/: core_jobs.c
lib/iot-core-jobs/source/include/: core_jobs.h
lib/iot-core-jobs/test/: CMakeLists.txt
lib/iot-core-jobs/test/unit-test/: CMakeLists.txt  core_jobs_utest.c
lib/iot-core-jobs/test/unit-test/dependencies/FreeRTOS-Kernel/: FreeRTOSConfig.h  fake_port.h  portmacro.h
lib/iot-core-jobs/test/unit-test/dependencies/coreMQTT/: core_mqtt_config.h
lib/iot-core-mqtt-file-downloader/: README.md
lib/iot-core-mqtt-file-downloader/docs/doxygen/: config.doxyfile  layout.xml  style.css
lib/iot-core-mqtt-file-downloader/source/: MQTTFileDownloader.c  MQTTFileDownloader_base64.c  MQTTFileDownloader_cbor.c
lib/iot-core-mqtt-file-downloader/source/include/: MQTTFileDownloader.h  MQTTFileDownloader_base64.h  MQTTFileDownloader_cbor.h
lib/iot-core-mqtt-file-downloader/test/: CMakeLists.txt
lib/iot-core-mqtt-file-downloader/test/cbmc/: .gitignore  proofs.c  run_proofs.sh
lib/iot-core-mqtt-file-downloader/test/cbmc/include/: cbor.h
lib/iot-core-mqtt-file-downloader/test/cbmc/stubs/: tinycbor.c
lib/iot-core-mqtt-file-downloader/test/unit-test/: CMakeLists.txt  downloader_base64_utest.c  downloader_cbor_utest.c  downloader_utest.c
lib/iot-core-mqtt-file-downloader/test/unit-test/dependencies/: cbor.h
lib/iot-core-mqtt-file-downloader/tools/coverity/: misra.config
lib/mqtt_wrapper/: mqtt_wrapper.c  mqtt_wrapper.h
main/: CMakeLists.txt
main/cfg/csdk_logging/: logging.h
main/src/: main.c
main/src/credentials/: credentials_INSECURE.c  credentials_INSECURE.h
main/src/key_value_store/: key_value_store.c  key_value_store.h
main/src/os/: ota_os_freertos.c
main/src/ota_demo/: ota_demo.c  ota_demo.h
main/src/transport/: transport.c  transport.h
main/src/wifi/: wifi.c  wifi.h
nix/: esp-idf.nix  espidf.constraints.v5.0.txt  overlay.nix
nvs/: factory_nvs.csv  flash_nvs.sh
source/: main.c
source/transport/: openssl_posix.c  openssl_posix.h  sockets_posix.c  sockets_posix.h  transport.c  transport.h  transport_wrapper.c  transport_wrapper.h
source/utils/: freertos_hooks.c
test/: CMakeLists.txt
test/unit-test/: CMakeLists.txt
test/unit-test/iot-core-jobs-ota-parser/: job_parser_utest.c  ota_job_handler_utest.c
tools/cmock/: coverage.cmake  project.yml
